--- a/orm_project/categoriaapp/templates/categoriaapp/categoria_detalle.html
+++ b/orm_project/categoriaapp/templates/categoriaapp/categoria_detalle.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle de Categoría</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Detalle Categoria{% endblock %}
+
+{% block content %}
     <h1>Detalle de Categoría</h1>
     <p>Nombre: {{ categoria.nombre }}</p>
-</body>
-</html>
+{% endblock %}
