--- a/orm_project/productoapp/templates/productoapp/producto_detalle.html
+++ b/orm_project/productoapp/templates/productoapp/producto_detalle.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Editar Producto{% endblock %}
+{% block title %}Detalle Producto{% endblock %}
 
 {% block content %}
     <h1>Detalle del Producto</h1>
