--- a/orm_project/categoriaapp/templates/categoriaapp/categoria_editar.html
+++ b/orm_project/categoriaapp/templates/categoriaapp/categoria_editar.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Categoría</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Editar Categoria{% endblock %}
+
+{% block content %}
     <h1>Editar Categoría</h1>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Guardar Cambios</button>
     </form>
-</body>
-</html>
+{% endblock %}
