--- a/orm_project/etiquetaapp/templates/etiquetaapp/etiqueta_detalle.html
+++ b/orm_project/etiquetaapp/templates/etiquetaapp/etiqueta_detalle.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle de Etiqueta</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Detalle Etiqueta{% endblock %}
+
+{% block content %}
     <h1>Detalle de Etiqueta</h1>
     <p>Nombre: {{ etiqueta.nombre }}</p>
-</body>
-</html>
+{% endblock %}
