--- a/orm_project/etiquetaapp/templates/etiquetaapp/etiqueta_lista.html
+++ b/orm_project/etiquetaapp/templates/etiquetaapp/etiqueta_lista.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Etiquetas</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Lista de Etiquetas{% endblock %}
+
+{% block content %}
     <h1>Lista de Etiquetas</h1>
     <ul>
         {% for etiqueta in etiquetas %}
             <li>{{ etiqueta.nombre }}</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
