--- a/orm_project/perfilapp/templates/perfilapp/perfil_detalle.html
+++ b/orm_project/perfilapp/templates/perfilapp/perfil_detalle.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle del Perfil</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Detalle Perfil{% endblock %}
+
+{% block content %}
     <h1>Detalle del Perfil</h1>
     <p>Nombre Completo: {{ perfil.nombre_completo }}</p>
     <p>Fecha de Nacimiento: {{ perfil.fecha_nacimiento }}</p>
     <p>Dirección: {{ perfil.direccion }}</p>
     <p>Teléfono: {{ perfil.telefono }}</p>
-</body>
-</html>
+{% endblock %}
