--- a/orm_project/productoapp/templates/productoapp/producto_crear.html
+++ b/orm_project/productoapp/templates/productoapp/producto_crear.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Producto</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Crear Producto{% endblock %}
+
+{% block content %}
     <h1>Crear Producto</h1>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Crear Producto</button>
     </form>
-</body>
-</html>
+{% endblock %}
